--- a/src/app/pages/components/sanpham/sanpham.component.html
+++ b/src/app/pages/components/sanpham/sanpham.component.html
@@ -55,6 +55,7 @@
                         <th class="text-center" style="width: 4rem;">
                             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                         </th>
+                        <th class="text-center">Ảnh</th>
                         <th class="text-center" pSortableColumn="tenSanPham">Tên sản phẩm<p-sortIcon
                                 field="tenSanPham"></p-sortIcon>
                         </th>
@@ -75,7 +76,7 @@
                         <th class="text-center">Hãng sản phẩm</th>
                         <th class="text-center">Trạng thái</th>
                         <th class="text-center" pSortableColumn="trangThaiHoatDong">Ẩn/Hiện<p-sortIcon
-                                field="trangThai"></p-sortIcon>
+                                field="trangThaiHoatDong"></p-sortIcon>
                         </th>
                         <th class="text-center">Chức năng</th>
                     </tr>
@@ -84,6 +85,9 @@
                     <tr style="height: 100px;">
                         <td class="text-center">
                             <p-tableCheckbox [value]="sanpham"></p-tableCheckbox>
+                        </td>
+                        <td class="text-center">
+                            <img width="150px" src="assets/Uploads/products/{{ sanpham.anhDaiDien }}" alt="">
                         </td>
                         <td class="text-center">{{ sanpham.tenSanPham }}</td>
                         <td class="text-center">{{ sanpham.giaBan | number }}
@@ -107,8 +111,9 @@
                                     <button class="button-actioc-many" (click)="deleteOnly(sanpham)"><i
                                             class="pi pi-trash"></i> Xóa</button>
                                     <button class="button-actioc-many" (click)="openImg(sanpham)"><i
-                                            class="pi pi-images"></i>
-                                        Ảnh</button>
+                                            class="pi pi-images"></i> Ảnh</button>
+                                    <button class="button-actioc-many" (click)="openParameter(sanpham)"><i
+                                            class="pi pi-book"></i> Thông số</button>
                                 </p-accordionTab>
                             </p-accordion>
                         </td>
@@ -169,27 +174,6 @@
                     <p-dropdown [options]="actions" id="trangThai" [(ngModel)]="selectAction"
                         optionLabel="name"></p-dropdown>
                 </div>
-
-                <div class="field mb-3">
-                    <label for="duongDanAnh">Ảnh đại diện sản phẩm</label>
-                    <div>
-                        <input type="file" id="file" (change)="onFileOnly($event)" />
-                        <label for="file" class="file-upload-btn">Tải ảnh</label>
-                    </div>
-                    <div *ngIf="fileOnly && fileOnly.length > 0" class="file-selected">
-                        <ul style="list-style: none;">
-                            <li *ngFor="let file of fileOnly">
-                                <ng-container *ngIf="shouldDisplayImage">
-                                    <img width="150px" height="50px" src="assets/Uploads/products/{{ file.name }}"
-                                        alt="">
-                                </ng-container>
-                                <ng-container *ngIf="!sanpham.shouldDisplayImage">
-                                    {{ file.name }}
-                                </ng-container>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
                 <div class="field mb-3">
                     <label for="duongDanAnh">Ảnh chi tiết sản phẩm</label>
                     <div>
@@ -207,8 +191,7 @@
                             </ul>
                         </ng-container>
                         <ng-container *ngIf="!shouldDisplayImage">
-                            <ul style="list-style: none; display: flex;
-                        flex-wrap: wrap;">
+                            <ul style="list-style: none; ">
                                 <li *ngFor="let file of selectedFiles">
                                     {{ file.name }}
                                 </li>
@@ -245,5 +228,228 @@
         </p-dialog>
 
         <p-confirmDialog [style]="{ width: '450px', }"></p-confirmDialog>
+
+        <!-- Ảnh sản phẩm -->
+        <p-dialog [(visible)]="DialogImg" [style]="{ width: '75vw' }" [header]="titleImg" [modal]="true"
+            (onHide)="onDialogHide()" styleClass="p-fluid">
+            <div class="col-12">
+                <div class="card">
+                    <p-toolbar styleClass="mb-4 gap-2">
+                        <ng-template pTemplate="left">
+                            <button pButton pRipple label="Thêm mới"
+                                style="background: #fff; color: #1D4E89; border: 1px solid #1D4E89; margin-right: 5px;"
+                                icon="pi pi-plus" class=" button-radius me-2 " (click)="openImgDetail()"></button>
+                            <button pButton pRipple icon="pi pi-trash" class="p-button-danger button-radius"
+                                (click)="deleteSelectedImg()" [disabled]="!selectedImg || !selectedImg.length"></button>
+                        </ng-template>
+
+                        <ng-template pTemplate="right">
+                            <button style="background: #1D4E89; border: 1px solid #1D4E89;" pButton pRipple
+                                label="Xuất file Excel" icon="pi pi-upload"
+                                class="p-button-help button-radius"></button>
+                        </ng-template>
+                    </p-toolbar>
+
+                    <p-table [value]="anhs" [paginator]="true" [rows]="10" [globalFilterFields]="['trangThai']"
+                        [tableStyle]="{ 'min-width': '60rem' }" [(selection)]="selectedImg" [rowHover]="true"
+                        currentPageReportTemplate="Hiển thị từ {first} đến {last} của {totalRecords} mục"
+                        [showCurrentPageReport]="true" [scrollable]="true">
+                        <ng-template pTemplate="caption">
+                            <div class="flex align-items-center justify-content-between">
+                                <h5 class="m-0">{{ titleImg }}</h5>
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="header">
+                            <tr class="text-center">
+                                <th class="text-center" style="width: 4rem;">
+                                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                                </th>
+                                <th class="text-center" pSortableColumn="tenSanPham">Sản phẩm<p-sortIcon
+                                        field="tenSanPham"></p-sortIcon>
+                                </th>
+                                <th class="text-center" pSortableColumn="giaBan">Ảnh sản phẩm<p-sortIcon
+                                        field="giaBan"></p-sortIcon>
+                                </th>
+                                <th class="text-center" pSortableColumn="trangThai">Ảnh đại diện<p-sortIcon
+                                        field="trangThai"></p-sortIcon>
+                                </th>
+                                <th class="text-center">Chức năng</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-anh>
+                            <tr style="height: 100px;">
+                                <td class="text-center">
+                                    <p-tableCheckbox [value]="anh"></p-tableCheckbox>
+                                </td>
+                                <td class="text-center">{{ anh.sanPhamName }}</td>
+                                <td class="text-center">
+                                    <img width="200px" src="assets/Uploads/products/{{ anh.duongDanAnh }}" alt="">
+
+                                </td>
+                                <td class="text-center">
+                                    <p-inputSwitch [(ngModel)]="anh.trangThai"
+                                        (ngModelChange)="toggleTrangThaiImg(anh)"></p-inputSwitch>
+                                </td>
+                                <td class="text-center">
+                                    <button pButton pRipple icon="pi pi-pencil" style="margin-right: 5px;"
+                                        class="p-button-rounded p-button-success me-2 action-button"
+                                        (click)="editImg(anh)"></button>
+                                    <button pButton pRipple icon="pi pi-trash"
+                                        class="p-button-rounded p-button-warning action-button"
+                                        (click)="deleteOnlyImg(anh)"></button>
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="summary">
+                            <div class="flex align-items-center justify-content-between">
+                                Tổng cộng có {{ anhs ? anhs.length : 0 }} ảnh sản phẩm.</div>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </div>
+        </p-dialog>
+
+        <p-dialog [(visible)]="DialogImgDetail" [style]="{ width: '1050px' }" [header]="titleImg" [modal]="true"
+            styleClass="p-fluid">
+            <ng-template pTemplate="content">
+                <div class="field mb-3">
+                    <label for="duongDanAnh">Ảnh đại diện sản phẩm</label>
+                    <div>
+                        <input type="file" id="file" (change)="onFileOnly($event)" />
+                        <label for="file" class="file-upload-btn">Tải ảnh</label>
+                    </div>
+                    <div *ngIf="fileOnly && fileOnly.length > 0" class="file-selected">
+                        <ul style="list-style: none;">
+                            <li *ngFor="let file of fileOnly">
+                                <ng-container *ngIf="shouldDisplayImage">
+                                    <img width="250px" src="assets/Uploads/products/{{ file.name }}" alt="">
+                                </ng-container>
+                                <ng-container *ngIf="!shouldDisplayImage">
+                                    {{ file.name }}
+                                </ng-container>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="footer">
+                <button pButton pRipple label="Hủy" icon="pi pi-times" class="p-button-text"
+                    (click)="hidenDialogImg()"></button>
+                <button pButton pRipple label="{{ Save }}" icon="pi pi-check" class="p-button-text" (click)="saveImg()"
+                    (click)="onUploadImg()"></button>
+            </ng-template>
+        </p-dialog>
+
+        <!-- Thông số sản phẩm -->
+        <p-dialog [(visible)]="DialogParameter" [style]="{ width: '75vw' }" [header]="titleParameter" [modal]="true"
+            (onHide)="onDialogHide()" styleClass="p-fluid">
+            <div class="col-12">
+                <div class="card">
+                    <p-toolbar styleClass="mb-4 gap-2">
+                        <ng-template pTemplate="left">
+                            <button pButton pRipple label="Thêm mới"
+                                style="background: #fff; color: #1D4E89; border: 1px solid #1D4E89; margin-right: 5px;"
+                                icon="pi pi-plus" class=" button-radius me-2 " (click)="openParameterDetail()"></button>
+                            <button pButton pRipple icon="pi pi-trash" class="p-button-danger button-radius"
+                                (click)="deleteSelectedParameter()"
+                                [disabled]="!selectedParameter || !selectedParameter.length"></button>
+                        </ng-template>
+
+                        <ng-template pTemplate="right">
+                            <button style="background: #1D4E89; border: 1px solid #1D4E89;" pButton pRipple
+                                label="Xuất file Excel" icon="pi pi-upload"
+                                class="p-button-help button-radius"></button>
+                        </ng-template>
+                    </p-toolbar>
+
+                    <p-table [value]="thongsos" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['tenThongSo', 'moTa', 'trangThai']"
+                        [tableStyle]="{ 'min-width': '60rem' }" [(selection)]="selectedParameter" [rowHover]="true"
+                        currentPageReportTemplate="Hiển thị từ {first} đến {last} của {totalRecords} mục"
+                        [showCurrentPageReport]="true" [scrollable]="true">
+                        <ng-template pTemplate="caption">
+                            <div class="flex align-items-center justify-content-between">
+                                <h5 class="m-0">{{ titleParameter }}</h5>
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="header">
+                            <tr class="text-center">
+                                <th class="text-center" style="width: 4rem;">
+                                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                                </th>
+                                <th class="text-center">Sản phẩm
+                                </th>
+                                <th class="text-center" pSortableColumn="tenThongSo">Tên thông số<p-sortIcon
+                                        field="tenThongSo"></p-sortIcon>
+                                </th>
+                                <th class="text-center" pSortableColumn="moTa">Mô tả<p-sortIcon
+                                        field="moTa"></p-sortIcon>
+                                </th>
+                                <th class="text-center" pSortableColumn="trangThai">Ẩn/Hiện<p-sortIcon
+                                        field="trangThai"></p-sortIcon>
+                                </th>
+                                <th class="text-center">Chức năng</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-thongso>
+                            <tr style="height: 100px;">
+                                <td class="text-center">
+                                    <p-tableCheckbox [value]="thongso"></p-tableCheckbox>
+                                </td>
+                                <td class="text-center">{{ thongso.sanPhamName }}</td>
+                                <td class="text-center">{{ thongso.tenThongSo }}</td>
+                                <td class="text-center">{{ thongso.moTa }}</td>
+                                <td class="text-center">
+                                    <p-inputSwitch [(ngModel)]="thongso.trangThai"
+                                        (ngModelChange)="toggleTrangThaiParameter(thongso)"></p-inputSwitch>
+                                </td>
+                                <td class="text-center">
+                                    <button pButton pRipple icon="pi pi-pencil" style="margin-right: 5px;"
+                                        class="p-button-rounded p-button-success me-2 action-button"
+                                        (click)="editParameter(thongso)"></button>
+                                    <button pButton pRipple icon="pi pi-trash"
+                                        class="p-button-rounded p-button-warning action-button"
+                                        (click)="deleteOnlyParameter(thongso)"></button>
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="summary">
+                            <div class="flex align-items-center justify-content-between">
+                                Tổng cộng có {{ thongsos ? thongsos.length : 0 }} thông số sản phẩm.</div>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </div>
+        </p-dialog>
+
+        <p-dialog [(visible)]="DialogParameterDetail" [style]="{ width: '1050px' }" [header]="titleParameter"
+            [modal]="true" styleClass="p-fluid">
+            <ng-template pTemplate="content">
+                <div class="field mb-3">
+                    <label for="tenThongSo">Tên thông số</label>
+                    <input type="text" pInputText id="tenThongSo" [(ngModel)]="thongso.tenThongSo" required autofocus />
+                    <small class="p-error" *ngIf="submitted && !thongso.tenThongSo">Tên thông số là bắt buộc.</small>
+                </div>
+                <div class="field mb-3">
+                    <label for="moTa">Mô tả</label>
+                    <input type="text" pInputText id="moTa" [(ngModel)]="thongso.moTa" required autofocus />
+                    <small class="p-error" *ngIf="submitted && !thongso.moTa">Tên thông số là bắt buộc.</small>
+                </div>
+                <div class="field mb-3">
+                    <label for="trangThai">Trạng thái</label>
+                    <p-dropdown [options]="actions" id="trangThai" [(ngModel)]="selectAction"
+                        optionLabel="name"></p-dropdown>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="footer">
+                <button pButton pRipple label="Hủy" icon="pi pi-times" class="p-button-text"
+                    (click)="hidenDialogParameter()"></button>
+                <button pButton pRipple label="{{ Save }}" icon="pi pi-check" class="p-button-text"
+                    (click)="saveParameter()"></button>
+            </ng-template>
+        </p-dialog>
+
     </div>
 </div>
