--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
     color: #eee;
     font-weight: 700;
     border-radius: 6px;
+    margin: auto;
 }
 
 .p-accordion
@@ -22,6 +23,7 @@
     width: 101px;
     padding: 0.25rem 0;
     border: none !important;
+    margin: auto;
 }
 
 .p-dropdown {
